2005-12-29  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Disable building LBX by default.

2005-12-29  Dave Airlie  <airlied@linux.ie>

	* hw/xfree86/os-support/bus/Pci.c: (pciByteSwap):
	* hw/xfree86/os-support/bus/Pci.h:
	* hw/xfree86/os-support/bus/freebsdPci.c:
	* hw/xfree86/os-support/bus/ix86Pci.c:
	* hw/xfree86/os-support/bus/linuxPci.c:
	* hw/xfree86/os-support/bus/ppcPci.c: (ppcPciInit):
	* hw/xfree86/os-support/bus/zx1PCI.c:
	* hw/xfree86/os-support/xf86_OSlib.h:
	Remove PowerMAX_OS define it never worked , it'll never work
	again, finishes running joke of OLS2005	

2005-12-28  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xgl/Makefile.am:
	* hw/xgl/egl/Makefile.am:
	* hw/xgl/glx/Makefile.am:
	* mi/miinitext.c:
	Add necessary *CONFIG_H declarations and a force-off of XF86* extensions
	in miinitext in the XGL case.  Prevents mismatched structure sizes on my
	_XSERVER64 machine.  At this point, with the uncommitted render/ diffs,
	Xglx starts up but displays badly.

2005-12-28  Luc Verhaegen  <libv@skynet.be>

	* configure.ac:
	* hw/xfree86/common/xf86Config.c: (GenerateDriverlist),
	(configMonitor), (configExtensions), (xf86HandleConfigFile):
	* hw/xfree86/common/xf86Mode.c: (xf86ModeStatusToString),
	(xf86CheckModeForMonitor):
	* hw/xfree86/common/xf86str.h:
	* hw/xfree86/utils/Makefile.am:
	* hw/xfree86/utils/cvt/Makefile.am:
	* hw/xfree86/utils/cvt/cvt.c: (add), (PrintModeline),
	(xf86CVTMode), (xf86CVTCheckStandard), (PrintUsage),
	(PrintComment), (main):
	* hw/xfree86/utils/cvt/cvt.man.pre:
	Bug #5153: standalone CVT modeline generator.
	- add hw/xfree86/utils/cvt/, cvt.c, cvt.man.pre and Makefile.am.   
	- Adjust configure.ac and hw/xfree86/utils/Makefile.am for cvt. 
	- Add MonPtr->reducedblanking and Option "ReducedBlanking" to the
	  Monitor section.
	- Check for reduced blanking in xf86CheckModeForMonitor and disallow
	  modes with less than 25% blanking otherwise.
	- Fix some warnings in hw/xfree86/common/xf86Config.c.
